fix issue in short url

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -109,6 +109,7 @@
       <div class="result success">
         <p>Your short URL is:</p>
         <div class="link-container">
+            <span>https//:SHORT_URL</span>
           <a href="<%= shortUrl %>" target="_blank"><%= shortUrl %></a>
         </div>
       </div>
